--- a/app-src/public/style.css
+++ b/app-src/public/style.css
@@ -148,6 +148,26 @@ svg#hamburger {
   top: 100px;
 }*/
 
+#help-page {
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+  padding-top: 75px;
+  overflow-y: auto;
+}
+
+#help-page > div {
+  width: 500px;
+  max-width: 100%;
+  margin: auto;
+  padding: 1em;
+}
+
 #menu {
   display: block;
   background-color: #eee;
@@ -165,6 +185,7 @@ svg#hamburger {
   display: block;
   text-align: right;
   padding-right: 20px;
+  margin-bottom: 20px;
 }
 
 #menu li svg {
