--- a/style.css
+++ b/style.css
@@ -133,11 +133,80 @@ svg#play-pause {
 svg#close {
   position: absolute;
   top: 20px;
+  left: 20px;
+}
+
+svg#hamburger {
+  position: absolute;
+  top: 20px;
   right: 20px;
 }
 
-svg#export {
+/*#export {
   position: absolute;
   right: 20px;
   top: 100px;
+}*/
+
+#help-page {
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+  padding-top: 75px;
+  overflow-y: auto;
+}
+
+#help-page > div {
+  width: 500px;
+  max-width: 100%;
+  margin: auto;
+  padding: 1em;
+}
+
+#menu {
+  display: block;
+  background-color: #eee;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 400px;
+  height: 100%;
+  padding: 0px;
+  padding-top: 100px;
+  margin: 0px;
+}
+
+#menu li {
+  display: block;
+  text-align: right;
+  padding-right: 20px;
+  margin-bottom: 20px;
+}
+
+#menu li svg {
+}
+
+#menu li a {
+  color: #aaa;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+#menu li a:hover {
+  color: #faa;
+  text-decoration: none;
+}
+
+#menu li a:hover svg.icon {
+  fill: #faa;
+}
+
+#menu li svg {
+  margin-left: 20px;
+  vertical-align: middle;
 }
