--- a/app-src/public/style.css
+++ b/app-src/public/style.css
@@ -177,6 +177,14 @@ svg#hamburger {
   padding: 1em;
 }
 
+#help-page img {
+  display: block;
+  margin: 50px auto;
+  border: 1px solid #333;
+  border-radius: 3px;
+  box-shadow: 0px 0px 10px #555;
+}
+
 #menu {
   display: block;
   background-color: #eee;
