--- a/app-src/public/style.css
+++ b/app-src/public/style.css
@@ -56,17 +56,17 @@ a:hover {
 #choosefile {
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   position: absolute;
-  top: 0px;
-  left: 0px;
-  bottom: 0px;
-  right: 0px;
-  margin: 40px;
   border: 3px dotted #888;
   text-align: center;
   background-color: #eee;
   border-radius: 20px;
+  width: 90%;
+  height: 90%;
+  max-width: 500px;
+  max-height: 500px;
+  box-sizing: border-box;
 }
 
 #spinner {
