--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -30,6 +31,7 @@ body {
 h1, h2, h3 {
   color: #000;
 }
+
 h1 {
   font-size: 2.5em
 }
@@ -54,17 +56,17 @@ a:hover {
 #choosefile {
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   position: absolute;
-  top: 0px;
-  left: 0px;
-  bottom: 0px;
-  right: 0px;
-  margin: 40px;
   border: 3px dotted #888;
   text-align: center;
   background-color: #eee;
   border-radius: 20px;
+  width: 90%;
+  height: 90%;
+  max-width: 500px;
+  max-height: 500px;
+  box-sizing: border-box;
 }
 
 #spinner {
@@ -109,8 +111,15 @@ a:hover {
 }
 
 #animation svg {
-  max-width: 100vw;
-  max-height: 100vh;
+  border: 1px dashed silver;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 95vw;
+  max-height: 95vh;
+  width: unset;
+  height: unset;
 }
 
 svg.icon {
@@ -166,6 +175,14 @@ svg#hamburger {
   max-width: 100%;
   margin: auto;
   padding: 1em;
+}
+
+#help-page img {
+  display: block;
+  margin: 50px auto;
+  border: 1px solid #333;
+  border-radius: 3px;
+  box-shadow: 0px 0px 10px #555;
 }
 
 #menu {
