--- a/app-src/public/style.css
+++ b/app-src/public/style.css
@@ -120,6 +120,32 @@ a:hover {
   margin: auto;
 }
 
+#intro {
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+  padding: 75px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#intro > div {
+  width: 600px;
+  max-width: 95vw;
+}
+
+#intro li + li {
+  margin-top: 0.5em;
+}
+
 #help-page {
   top: 0px;
   left: 0px;
@@ -226,6 +252,10 @@ a:hover {
 #menu #actions > * {
   text-align: center;
   vertical-align: middle;
+}
+
+#menu #actions .menu > * + * {
+  margin-left: 1em;
 }
 
 #menu svg.icon {
